# theseus

./: .gitignore  README.md  default.nix  deps.sh  shell.nix  theseus.cabal
examples/: binary.ths  bool.ths  byte.ths  ordering.ths  partial.ths  peano.ths  pi.ths  sort.ths  tree.ths
nix/: fetchNixpkgs.nix
nix/haskell/: deriving-compat.nix  parsix.nix  theseus.nix
pio/examples/: test1.pio
pio/src/: Pio.hs
repl/: Main.hs
src/: Theseus.hs
src/Theseus/: AbstractSyntax.hs  Coverage.hs  Debug.hs  Eval.hs  Imports.hs  Parse.hs  Parser.hs  Pretty.hs  PrettyPrint.hs  Repl.hs  Semantics.hs  Tc.hs
