cabal-version: 2.2
name:
  theseus
version:
  0.0.0.1
synopsis:
  lang
description:
  Theseus, functional language with fully reversible computation
homepage:
  https://github.com/chessai/theseus.git
license:
  MIT
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai1996@gmail.com
copyright:
  (c) 2018 chessai
category:
  Language
build-type:
  Simple
extra-source-files:
  ChangeLog.md

library
  hs-source-dirs:
    src
  exposed-modules:
    Theseus
    Theseus.AbstractSyntax
    Theseus.Coverage
    Theseus.Eval
    Theseus.Parse
    Theseus.Pretty
    Theseus.Repl
    Theseus.Semantics
    Theseus.Tc
  build-depends:
    , base >=4.10 && <5
    , pretty
    , parsec
    , transformers
    , mtl
    , repline
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -O2

executable thci
  main-is: Main.hs
  hs-source-dirs: repl
  default-language: Haskell2010
  build-depends: base, theseus
  ghc-options: -Wall -Werror -O2
